infra/k8s-prod/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.digitalcampus.shop
      http:
        paths:
          - path: /v1/api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
          - path: /classroom/?(.*)
            pathType: Prefix
            backend:
              service:
                name: classroom-srv
                port:
                  number: 3000
          - path: /assignment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: assignment-srv
                port:
                  number: 3000       
          - path: /v1/api/payment/?(.*)
            pathType: Prefix
            backend:
              service:
                name: payment-srv
                port:
                  number: 3000       
          - path: /v1/api/chat/?(.*)
            pathType: Prefix
            backend:
              service:
                name: chat-srv
                port:
                  number: 3000
          - path: /submission/?(.*)
            pathType: Prefix
            backend:
              service:
                name: submission-srv
                port:
                  number: 3000         
---

apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: 'true'
    service.beta.kubernetes.io/do-loadbalancer-hostname: 'www.jobeee.website'
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/instance: ingress-nginx
    app.kubernetes.io/component: controller
